kubernetes/platform/kafka/schema-registry/components/route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: schema-registry
spec:
  hostnames:
  - schema-registry.${CLUSTER_DOMAIN}
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-gateway
    namespace: envoy-gateway-system
  rules:
  - backendRefs:
     - name: schema-registry
       port: 8081
    matches:
    - path:
        type: PathPrefix
        value: /
