kubernetes/platform/kafka/schema-registry/components/route/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: schema-registry
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: schema-registry
  oidc:
    provider:
      issuer: "https://iam.${CLUSTER_DOMAIN}/realms/picluster"
    clientIDRef:
      name: schema-registry-oauth2-externalsecret
    clientSecret:
      name: schema-registry-oauth2-externalsecret
    redirectURL: "https://schema-registry.${CLUSTER_DOMAIN}/oauth2/callback"
    logoutPath: "/schema-regsitry/logout"
